tests/baselines/reference/propertyAccess3.errors.txt
==== tests/cases/compiler/propertyAccess3.ts (1 errors) ====
    var foo: boolean;
    foo.toBAZ();
        ~~~~~
!!! propertyAccess3.ts(2,5): error TS2094: The property 'toBAZ' does not exist on value of type 'boolean'.